2006-12-22  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/fc6.py:  Added multipath support back in.

	* pykickstart/commands/base.py (BaseData):  Added a superclass for all
	those Kickstart*Data objects.
	* pykickstart/commands/fc4.py:  Use BaseData.
	* pykickstart/commands/fc6.py:  Likewise.

2006-12-20  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/fc4.py (CommandReboot.__str__):  Fix output
	formatting.

	* Merge from HEAD:  Updated translations.

2006-12-20  Chris Lumens  <clumens@redhat.com>

	* pykickstart/__init__.py:  Clear this out.

	* pykickstart/errors.py:  Add __doc__ strings to all classes and
	public methods.
	* pykickstart/options.py:  Likewise.
	* pykickstart/version.py:  Likewise.
	* pykickstart/commands/base.py:  Likewise.

	* pykickstart/parser.py:  Add __doc__ strings to all classes and
	public methods.  Privatize attributes in KickstartParser that don't
	need to be public.

	* pykickstart/commands/fc4.py (FC4Handler.__init__):  _registerHandler
	is no longer private.
	* pykickstart/commands/fc5.py (FC5Handler.__init__):  Likewise.
	* pykickstart/commands/fc6.py (FC6Handler.__init__):  Likewise.

	* docs/programmers-guide:  Remove stuff that's now duplicated by
	__doc__ strings.

2006-12-19  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/base.py (KickstartCommand.__call__):  Add a
	function to set all the attributes of a command object at once.
	(BaseHandler._registerHandler):  Don't need to do so much goofy stuff
	to register a command handler anymore.

	* pykickstart/version.py (returnClassForVersion):  Add a function to
	return the class matching a given kickstart syntax version.  This does
	not return an instance of that class.

	* Makefile:  Add pykickstart/commands/*.pyc to what gets cleaned.

	* setup.py:  Package up commands as well.

	* test.py:  This isn't needed anymore.

2006-12-19  Chris Lumens  <clumens@redhat.com>

	* pykickstart/commands/fc4.py:  Add named arguments to __init__